--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/* Reset */
+
 html {
 	box-sizing: border-box;
 	font-size: 16px;
@@ -18,7 +20,9 @@ h5,
 h6,
 p,
 ol,
-ul {
+ul,
+figure,
+blockquote {
 	margin: 0;
 	padding: 0;
 	font-weight: normal;
@@ -32,4 +36,185 @@ ul {
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+/* Styles */
+
+body {
+	font-family: "Roboto", sans-serif;
+	color: #1f2937;
+}
+
+.container {
+	max-width: 60rem;
+	margin: 0 auto;
+}
+
+/* Header */
+
+/* Nav */
+
+.header {
+	background-color: #1f2937;
+	color: #f9faf8;
+}
+
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
+	padding: 16px 0;
+}
+
+.logo {
+	font-size: 24px;
+	font-weight: 700;
+}
+
+.nav-links {
+	display: flex;
+	gap: 16px;
+}
+
+.secondary {
+	color: #e5e7eb;
+	font-size: 18px;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+/* Hero */
+
+.hero {
+	display: flex;
+	gap: 32px;
+	justify-content: center;
+	padding: 120px 0;
+}
+
+.content {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: start;
+	gap: 10px;
+}
+
+.hero-text {
+	font-size: 48px;
+	font-weight: 900;
+}
+
+.placeholder {
+	flex: 1;
+	background-color: #6e747c;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+button {
+	background-color: #3882f6;
+	border: none;
+	color: inherit;
+	font-size: 18px;
+	font-weight: 700;
+	padding: 8px 32px;
+	border-radius: 8px;
+}
+
+/* Information */
+
+.information {
+	text-align: center;
+	margin-bottom: 48px;
+}
+
+.info-heading {
+	font-size: 36px;
+	font-weight: 900;
+	padding: 48px;
+}
+
+.cardbox {
+	display: flex;
+	justify-content: center;
+	gap: 48px;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	max-width: 150px;
+	gap: 8px;
+}
+
+.box {
+	width: 150px;
+	height: 150px;
+	border: 3px solid #3882f6;
+	border-radius: 8px;
+}
+
+.card-info {
+	color: #6f7580;
+}
+
+/* Testimonial */
+
+.testimonial {
+	background-color: #e5e7eb;
+}
+
+.testimonial figure {
+	padding: 96px 80px;
+}
+
+.testimonial-text {
+	font-size: 36px;
+	font-style: italic;
+	font-weight: 300;
+}
+
+.testimonial-attribution {
+	font-size: 24px;
+	font-weight: bold;
+	text-align: end;
+}
+
+/* Call to Action */
+
+.cta-content {
+	background-color: #3882f6;
+	border-radius: 8px;
+	color: #e5e7eb;
+	margin: 64px 0;
+	padding: 50px 120px;
+	display: flex;
+	justify-content: space-between;
+	gap: 16px;
+}
+
+.cta-content h2 {
+	font-weight: 700;
+}
+
+.cta-button {
+	border: 3px solid #e5e7eb;
+}
+
+.footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 32px;
+	background-color: #1f2937;
+	color: #e5e7eb;
+	font-size: 18px;
 }
